@@ -1,3 +1,14 @@
+11/23/2005 Bob Rossi <bob@brasko.net>
+
+	* tgdb-base/include/tgdb.h, tgdb-base/src/tgdb.c (
+	tgdb_request_run_console_command, tgdb_request_inferiors_source_files,
+	tgdb_request_absolute_path, tgdb_request_run_debugger_command, 
+	tgdb_request_modify_breakpoint, tgdb_request_complete): Update 
+	interface to return request_ptr.
+	* tgdb-base/include/tgdb_types.h (tgdb_request_ptr): Add typedef.
+	* tgdb-base/src/driver.c (rlctx_send_user_command, tab_completion): 
+	Update to TGDB's new interface.
+
 11/20/2005 Bob Rossi <bob@brasko.net>
 
 	* tgdb-base/include/tgdb.h (prompt_update,
